stylesheets/application.css
/* ... */
#admin-menu a.selected { background-color:#5a6695; background-position:6px center; display:inline-block; padding:2px 7px 2px 26px !important; margin-left:-8px; margin-right:20px; color:#fff; border-radius:4px; box-shadow: inset 0 0 1px #bbbbf5; line-height:19px; }
#sidebar a.selected { background-color:#5a6695; padding:1px 6px 2px 5px; margin-left:-5px; color:#fff; border-radius:4px; box-shadow: inset 0 0 1px #bbbbf5; }

/* Modals */
div.modal { border:2px solid #9CC90E; padding:0; }
div.modal h3.title { background-color:#9CC90E; padding:4px 10px; border-top-left-radius:1px; border-top-right-radius:1px; }
.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 0; -webkit-border-bottom-right-radius: 0; -khtml-border-bottom-right-radius: 0; border-bottom-right-radius: 0; }
.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 0; -webkit-border-bottom-left-radius: 0; -khtml-border-bottom-left-radius: 0; border-bottom-left-radius: 0; }
.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 0; -webkit-border-top-right-radius: 0; -khtml-border-top-right-radius: 0; border-top-right-radius: 0; }
.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 0; -webkit-border-top-left-radius: 0; -khtml-border-top-left-radius: 0; border-top-left-radius: 0; }
.ui-widget-header { border: 1px solid #9CC90E; background: #9CC90E; color: white; }

/* Menu */
#main-menu { left:108px; padding:0; margin:0; }
#main-menu li a { color:#fff; background-color:#6CB30B; font-weight:normal; margin:0 1px; padding-bottom:8px; }
#main-menu li a.settings {background-color:transparent;}
#main-menu li a:hover { color:#fff; background:#5CA306; text-decoration:none; }
#main-menu li a.selected, #main-menu li a.selected:hover {
  /* following lines taken from basecamphq directly. Thanks 37signals!! */
  background:#e9e9e9;
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fdfdfd', endColorstr='#e9e9e9'); /* IE */
  background:-webkit-gradient(linear, left top, left bottom, from(#fdfdfd), to(#e9e9e9)); /* webkit */
  background:-moz-linear-gradient(top,  #fdfdfd,  #e9e9e9); /* firefox 3.6+ */
  color:#222222; font-weight:bold; margin:0 1px; padding-bottom:8px; text-decoration:none;
}
#main-menu .menu-children {
  border-right: 1px solid #6CB30B;
  border-bottom: 1px solid #6CB30B;
  border-left: 1px solid #6CB30B;
}
#main-menu li a.new-object { background-color: #6CB30B;}
#main-menu .menu-children li a:hover {color: #fff; background-color: #6CB30B;}

/* Quick-search box */
#quick-search { color:#9CC90E; }
#quick-search label { display:none; }
#quick-search input#q { border:1px solid #aaa; padding:3px 20px 3px 3px; border-radius:3px; box-sizing:border-box;
                        background:#fff url(../images/search.png) no-repeat right center; }

/* Tabs / Settings */
#content .tabs ul { border-bottom:2px solid #e9e9e9; }
#content .tabs ul li { margin-right:2px; }
#content .tabs ul li a { border:0; border-bottom:1px solid #e9e9e9; font-weight:normal; background-color:#f5f5f5; }
#content .tabs ul li a:hover { color:#222; background-color:#e9e9e9; }
#content .tabs ul li a.selected, #content .tabs ul li a.selected:hover { color:#222; border:0; background:#e9e9e9; font-weight:bold; }
fieldset legend { font-weight:bold; }
.permissions_tab fieldset + fieldset { margin-top:10px; }
.permissions_tab fieldset legend { font-size:110%; }

/* Tables */
table.list { border:none; }
table.list td, table.list th { padding:6px 5px; }
table.list th { vertical-align:top; background-color:#E8E8E8; border-bottom:1px solid #e9e9eb; font-weight:normal; }
table.list tbody tr:hover { background-color:#edf3fe; }
.odd, .odd+.even-odd-linked { background-color:#fff; }
.even, .even+.even-odd-linked { background-color:#f6f7f8; }
table.list th .filter { margin:3px 0 2px; padding:1px 3px; width:100%; max-width:240px; box-sizing:border-box; border-radius:2px; border:1px solid #ccc; height:19px; color:#555; }
table.list th .filter:focus { outline:none; }

/* Forms */
.tabular label { line-height:2em; }

/* Issues */
div.issue div.subject h3 { color:#000; font-weight:bold; margin:4px 6px; }
div.issue p.author { font-style:italic; margin:3px 0 12px 4px; }
div.issue.details hr+div > .contextual { margin-top:0; }
div.journal div.wiki, div.issue div.wiki { color:#222; }
div.journal div.wiki { margin-left: 6px; }
div.journal { margin:5px 0 3px; padding:6px; }
div.journal.has-notes { background:#ffffdd; border:1px solid #d7d7d7; }
div.journal:not(.has-notes) + div.journal:not(.has-notes) { border-top:1px solid #e9e9e9; margin-top:0; padding-top:10px; }
div.journal h4 { color:#444; font-size:12px; margin-top:0; margin-left:6px; margin-bottom:4px; padding-right:3px; }
div.journal h4 .journal-link { color:#777; }
div.journal h4 div { font-style:normal; }
div.issue table.attributes>tbody>tr>th { min-width:70px; color:#666; }
div.issue table.attributes>tbody>tr>td { min-width:200px; }
div.issue img.gravatar { padding:2px; width:36px; height:36px; margin-top:4px; }
h4 img.gravatar, div.issue table img.gravatar { padding:1px; }
div.issue table img.gravatar { margin-top:-1px; }
h4 img.gravatar { margin: 0px 4px 0 0; }
div.journal .details { margin:0 8px 10px; padding-left:25px; list-style-type:square; color:#777; }
div.journal .details strong { font-weight:normal; }
div.journal .details:hover { color:#222; }
div.journal p { margin:12px 0; }
div.journal p + ul { margin:12px 0 4px; }
div.journal div.contextual { margin-top:0; }
table.issues td.assigned_to { white-space:nowrap; }
table.issues td.checkbox input { margin:3px 3px 4px 4px; }
table.issues tr > td { padding:3px 2px 1px; }
table.issues tr > td > table { margin-bottom:1px; }
tr.issue td.project { max-width:200px; white-space:normal; }
tr.issue td.subject { min-width:300px !important; }
#attachments_fields input.description { display:none; }
/* ... */

